--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -89,49 +89,30 @@ main {
 }
 
 .work {
-    display: flex;
+   
     flex-wrap: wrap;
     flex: 4;
-    justify-content: center;
     width: 100%;
     background-color: white;
     border-radius: 0px 0px 20px 20px;
+    padding: 2%;
+    line-height: 30px;
 }
 
-.big-card  {
-    background-image: url("../images/Circuit-board.jpeg");
-    background-position: center;
-    background-size: 100%;
-    border-width: 1px;
-    border-radius: 15px;
-    padding: 100px;
-    flex: 0 0 800px;
-    margin: 10px;
-    text-align: center;
+.work img {
+
+    height: 400px;
+    border-radius: 20px;
+    padding: 10px;
 }
 
-.big-card a {
-    font-size: 20px;
-    color:white;
-    font-family: Arial, Helvetica, sans-serif;
+.work h2 {
+    color: var(--dark);
 }
 
-.small-card {
-    background-image: url("../images/Light-beams.jpeg");
-    background-size: 100%;
-    background-position: center;
-    border-width: 1px;
-    border-radius: 15px;
-    padding: 60px;
-    flex: 0 0 400px;
-    margin: 10px;
-    text-align: center;
-}
-
-.small-card h3 {
-    color: white;
-    font-family: monospace;
-    font-size: 150%;
+.work p , .work p a{
+    font-size: 15px;
+    color: var(--light);
 }
 
 .contact {
@@ -169,12 +150,12 @@ a:hover {
         flex-direction: column;
         align-items: center;
     }
-    .big-card {
-        flex: 0 0 300px;
-        width: 100px;
+    .work img {
+        height: 150px;
+        border-radius: 20px;
     }
-    .small-card {
-        flex: 0 0 100px;
+    .work p , .work p a {
+        font-size: 10px;
     }
     .about-me img {
         height: 350px;
